--- a/app/src/main/res/layout/endgame_main.xml
+++ b/app/src/main/res/layout/endgame_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/endgame"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray">
+    android:background="@drawable/centerstagebackground">
 
     <TextView
         android:id="@+id/hang"
@@ -639,6 +639,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="636dp"
+        android:backgroundTint="@color/gray"
         android:onClick="blueMajorPenaltiesAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
@@ -651,6 +652,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="748dp"
+        android:backgroundTint="@color/gray"
         android:onClick="blueMinorPenaltiesAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
@@ -663,6 +665,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="636dp"
+        android:backgroundTint="@color/gray"
         android:onClick="redMajorPenaltiesAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.628"
@@ -675,6 +678,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="748dp"
+        android:backgroundTint="@color/gray"
         android:onClick="redMinorPenaltiesAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.628"
@@ -687,6 +691,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="636dp"
+        android:backgroundTint="@color/gray"
         android:onClick="blueMajorPenaltiesSubtract"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.371"
@@ -699,6 +704,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="748dp"
+        android:backgroundTint="@color/gray"
         android:onClick="blueMinorPenaltiesSubtract"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.371"
@@ -711,6 +717,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="636dp"
+        android:backgroundTint="@color/gray"
         android:onClick="redMajorPenaltiesSubtract"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.892"
@@ -723,6 +730,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="748dp"
+        android:backgroundTint="@color/gray"
         android:onClick="redMinorPenaltiesSubtract"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.892"
