--- a/app/src/main/res/layout/totalscore_main.xml
+++ b/app/src/main/res/layout/totalscore_main.xml
@@ -6,23 +6,42 @@
     android:id="@+id/totalscore"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray">
+    android:background="@drawable/centerstagebackground">
 
     <TextView
-        android:id="@+id/TitleCard"
+        android:id="@+id/totalscoretitle"
         android:layout_width="398dp"
         android:layout_height="254dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="332dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/raleway_bold"
         android:gravity="center"
-        android:text="-"
+        android:text="Total Scores:"
         android:textColor="@color/white"
         android:textSize="100dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/redwinstitle"
+        android:layout_width="398dp"
+        android:layout_height="254dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="248dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/raleway_bold"
+        android:gravity="center"
+        android:text="Red Wins!"
+        android:textColor="@color/red"
+        android:textSize="72dp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,7 +49,7 @@
         android:id="@+id/backbutton"
         android:layout_width="332dp"
         android:layout_height="98dp"
-        android:layout_marginTop="584dp"
+        android:layout_marginTop="624dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/raleway_bold"
         android:onClick="goBackToEndgame"
@@ -46,18 +65,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/bluetotalscore"
-        android:layout_width="199dp"
-        android:layout_height="334dp"
-        android:layout_marginTop="292dp"
+        android:id="@+id/dashtitle"
+        android:layout_width="398dp"
+        android:layout_height="254dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="372dp"
+        android:layout_marginEnd="24dp"
         android:fontFamily="@font/raleway_bold"
         android:gravity="center"
-        android:text="0"
-        android:textColor="@color/blue"
+        android:text="-"
+        android:textColor="@color/white"
         android:textSize="100dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.981"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,90 +86,15 @@
         android:id="@+id/redtotalscore"
         android:layout_width="196dp"
         android:layout_height="336dp"
-        android:layout_marginTop="292dp"
+        android:layout_marginTop="332dp"
         android:fontFamily="@font/raleway_bold"
         android:gravity="center"
         android:text="0"
         android:textColor="@color/red"
-        android:textSize="100dp"
+        android:textSize="72dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.041"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/TitleCard"
-        android:layout_width="398dp"
-        android:layout_height="254dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:fontFamily="@font/raleway_bold"
-        android:gravity="center"
-        android:text="Total Scores:"
-        android:textSize="100dp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:id="@+id/redwinstitle"
-        android:layout_width="398dp"
-        android:layout_height="254dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="208dp"
-        android:layout_marginEnd="24dp"
-        android:fontFamily="@font/raleway_bold"
-        android:gravity="center"
-        android:text="Red Wins!"
-        android:textColor="@color/red"
-        android:textSize="72dp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/bluewinstitle"
-        android:layout_width="398dp"
-        android:layout_height="254dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="210dp"
-        android:layout_marginEnd="24dp"
-        android:fontFamily="@font/raleway_bold"
-        android:gravity="center"
-        android:text="Blue Wins!"
-        android:textColor="@color/blue"
-        android:textSize="72dp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.771"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tietitle"
-        android:layout_width="398dp"
-        android:layout_height="254dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="210dp"
-        android:layout_marginEnd="24dp"
-        android:fontFamily="@font/raleway_bold"
-        android:gravity="center"
-        android:text="Tie?"
-        android:textColor="@color/white"
-        android:textSize="72dp"
-        android:textStyle="bold"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.771"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -156,7 +102,7 @@
         android:id="@+id/calculatebutton"
         android:layout_width="332dp"
         android:layout_height="98dp"
-        android:layout_marginTop="416dp"
+        android:layout_marginTop="456dp"
         android:backgroundTint="@color/blue"
         android:fontFamily="@font/raleway_bold"
         android:onClick="calculateScoreTotal"
@@ -168,6 +114,60 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/bluewinstitle"
+        android:layout_width="398dp"
+        android:layout_height="254dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="252dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/raleway_bold"
+        android:gravity="center"
+        android:text="Blue Wins!"
+        android:textColor="@color/blue"
+        android:textSize="72dp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.742"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/bluetotalscore"
+        android:layout_width="199dp"
+        android:layout_height="334dp"
+        android:layout_marginTop="332dp"
+        android:fontFamily="@font/raleway_bold"
+        android:gravity="center"
+        android:text="0"
+        android:textColor="@color/blue"
+        android:textSize="72dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.981"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tietitle"
+        android:layout_width="398dp"
+        android:layout_height="254dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="248dp"
+        android:layout_marginEnd="24dp"
+        android:fontFamily="@font/raleway_bold"
+        android:gravity="center"
+        android:text="Tie?"
+        android:textColor="@color/white"
+        android:textSize="72dp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
