--- a/app/src/main/res/layout/auto_main.xml
+++ b/app/src/main/res/layout/auto_main.xml
@@ -102,7 +102,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/bluebackdrop"
+        android:id="@+id/bluewhitebackdroptitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="612dp"
@@ -133,7 +133,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/bluebackdrop"
+        android:id="@+id/bluewhitebackstagetitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="724dp"
