--- a/app/src/main/res/layout/endgame_main.xml
+++ b/app/src/main/res/layout/endgame_main.xml
@@ -100,7 +100,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/bluebackdrop"
+        android:id="@+id/bluemajorpenaltiestitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="612dp"
@@ -131,7 +131,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/bluebackdrop"
+        android:id="@+id/blueminorpenaltiestitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="724dp"
